# eXoSearch

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  search.cpp
.github/workflows/: build.yml
src/: application.cpp  application.h  command_t.h  display_manager.cpp  display_manager.h  entry_t.h  exit_codes_t.h  input_handler.cpp  input_handler.h  main.cpp  prototypes.h  safe_queue.cpp  safe_queue.h  search_engine.cpp  search_engine.h  timing_t.h  utilities.cpp  utilities.h  xml_parser.cpp  xml_parser.h
